<?xml version="1.0"?>
<package format="2">
  <name>guide_msgs</name>
  <version>0.0.0</version>
  <description>The guide_msgs package</description>
  <maintainer email="alexis.paques@gmail.com">Alexis Paques</maintainer>
  <license>MIT</license>
  <depend>catkin</depend>
  <depend>std_msgs</depend>
  
  <export>
  </export>
</package>
